Added Aspose3D package

--- a/ASCReader.csproj
+++ b/ASCReader.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Aspose.3D" Version="20.3.0" />
+  </ItemGroup>
+
 </Project>
