--- a/ASCReader.csproj
+++ b/ASCReader.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Aspose.3D" Version="20.3.0" />
+    <PackageReference Include="AssimpNet" Version="5.0.0-beta1" />
   </ItemGroup>
 
 </Project>
