Fixed normal map maker

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,6 +18,19 @@
             "stopAtEntry": false
         },
         {
+            "name": ".NET Core Launch (cmd), Automatic mode",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            // If you have changed target frameworks, make sure to update the program path.
+            "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/ASCReader.dll",
+            "args": ["auto"],
+            "cwd": "${workspaceFolder}",
+            // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
+            "console": "externalTerminal",
+            "stopAtEntry": false
+        },
+        {
             "name": ".NET Core Launch (console)",
             "type": "coreclr",
             "request": "launch",
