--- a/ASCReader.csproj
+++ b/ASCReader.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Aspose.3D" Version="20.3.0" />
     <PackageReference Include="AssimpNet" Version="5.0.0-beta1" />
+    <PackageReference Include="DotNetZip" Version="1.13.8" />
   </ItemGroup>
 
 </Project>
