--- a/ASCReader.csproj
+++ b/ASCReader.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Aspose.3D" Version="20.6.1" />
     <PackageReference Include="AssimpNet" Version="5.0.0-beta1" />
     <PackageReference Include="DotNetZip" Version="1.13.8" />
+    <ProjectReference Include = "..\MCUtils\MCUtils.csproj" />
   </ItemGroup>
 
 </Project>
