--- a/ASCReader.csproj
+++ b/ASCReader.csproj
@@ -10,14 +10,12 @@
     <PackageReference Include="Aspose.3D" Version="20.6.1" />
     <PackageReference Include="AssimpNet" Version="5.0.0-beta1" />
     <PackageReference Include="DotNetZip" Version="1.13.8" />
+    <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="ASCReaderMC">
-      <HintPath>..\ASCReaderMC\bin\Debug\netcoreapp3.1\ASCReaderMC.dll</HintPath>
-    </Reference>
     <Reference Include="MCUtils">
-      <HintPath>..\MCUtils\bin\Debug\netcoreapp2.2\MCUtils.dll</HintPath>
+      <HintPath>..\MCUtils\bin\Debug\netcoreapp3.1\MCUtils.dll</HintPath>
     </Reference>
   </ItemGroup>
 
