--- a/HMConMCPlugin/HMConMCPlugin.csproj
+++ b/HMConMCPlugin/HMConMCPlugin.csproj
@@ -11,13 +11,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ASCReaderImagePlugin\HMConImagePlugin.csproj" />
-    <ProjectReference Include="..\ASCReader\HMCon.csproj" />
-    <ProjectReference Include="..\MCUtils\MCUtils.csproj" />
+    <ProjectReference Include="..\HMConImagePlugin\HMConImagePlugin.csproj" />
+    <ProjectReference Include="..\HMConApp\HMCon.csproj" />
+    <ProjectReference Include="..\..\MCUtils\MCUtils.csproj" />
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="copy &quot;$(ProjectDir)$(OutDir)$(ProjectName)$(TargetExt)&quot; &quot;$(SolutionDir)$(OutDir)$(ProjectName)$(TargetExt)&quot;" />
+    <Exec Command="copy &quot;$(ProjectDir)$(OutDir)$(ProjectName)$(TargetExt)&quot; &quot;$(SolutionDir)HMConApp\$(OutDir)$(ProjectName)$(TargetExt)&quot;" />
   </Target>
 
 </Project>
