--- a/HMConImagePlugin/HMConImagePlugin.csproj
+++ b/HMConImagePlugin/HMConImagePlugin.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="copy &quot;$(ProjectDir)$(OutDir)$(ProjectName)$(TargetExt)&quot; &quot;$(SolutionDir)HMConApp\bin\$(ConfigurationName)\netcoreapp3.1\$(ProjectName)$(TargetExt)&quot;" />
+    <Exec Command="copy &quot;$(ProjectDir)$(OutDir)$(ProjectName)$(TargetExt)&quot; &quot;$(SolutionDir)HMConApp\bin\$(ConfigurationName)\$(ProjectName)$(TargetExt)&quot;" />
   </Target>
 
 </Project>
