Changed MC Splatmapper to XML format

--- a/HMCon/HMCon.csproj
+++ b/HMCon/HMCon.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\MCUtils\MCUtils.csproj" />
+    <ProjectReference Include="..\..\NoiseGenerator\NoiseGenerator.csproj" />
   </ItemGroup>
 
 </Project>
