--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,8 @@ bld/
 [Ll]og/
 [Ll]ogs/
 
+HMConTests/TestFiles/out/**
+
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
@@ -351,3 +353,4 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
