--- a/HMCon.csproj
+++ b/HMCon.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <PackageId></PackageId>
   </PropertyGroup>
 
@@ -13,11 +13,7 @@
   <ItemGroup>
     <PackageReference Include="netDXF" Version="2.2.0.1" />
     <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\MCUtils\MCUtils.csproj" />
-    <ProjectReference Include="..\..\NoiseGenerator\NoiseGenerator.csproj" />
+    <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
   </ItemGroup>
 
 </Project>
