--- a/HMCon.csproj
+++ b/HMCon.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>library</OutputType>
     <TargetFramework>netstandard2.0</TargetFramework>
     <PackageId></PackageId>
   </PropertyGroup>
